@@ -1,6 +1,6 @@
 ##########################################################################
 #
-#  Copyright (c) 2007, Image Engine Design Inc. All rights reserved.
+#  Copyright (c) 2007-2011, Image Engine Design Inc. All rights reserved.
 #
 #  Redistribution and use in source and binary forms, with or without
 #  modification, are permitted provided that the following conditions are
@@ -68,7 +68,7 @@ def create( *names ) :
 
 		def __hash__( self ) :
 
-			return hash( self.__value )
+			return hash( ( self.__class__, self.__value ) )
 
 		def __cmp__( self, other ) :
 
